# spoonacular_api

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  example.ipynb  make.bat  requirements.txt
src/spoonacular_api/: spoonacular_api.py
tests/: test_spoonacular_api.py
